--- a/config/sr_example.jsonc
+++ b/config/sr_example.jsonc
@@ -1,5 +1,8 @@
 {
-    "working_dir": "/cnrm/recyf/Data/users/danjoul/unet_experiments/tests/",
+    "path": {
+        "experiment": "/cnrm/recyf/Data/users/danjoul/unet_experiments/tests/",
+        "weights": null
+    },
     "data": {
         // these hyperparameters should not be changed : 
         "data_train_location": "/cnrm/recyf/Data/users/danjoul/dataset/data_train/",
@@ -38,13 +41,15 @@
         "patches": {
             "enable": false,
             "train_method": "random", //null, "random" or "patchify" //useless if "enable": false
-            "test_method": "patchify", //idem
+            "test_method": "patchify", //null or "patchify"
             // for "random"
             "patch_h": 128,
             "patch_w": 128,
             "n_patches": 5,
             // for "patchify"
-            "patch_size": 128
+            "patch_size": 128,
+            "IMG_H": 256, //size of the images with padding for patchify (should not be changed)
+            "IMG_W": 320
         },
         "data_augmentation": {
             "enable_flip": false,
@@ -53,6 +58,11 @@
             "frac_rot": 0.1
         }
         
+    },
+    "model": {
+        "type": "unet", // "unet", "resunet" or "uresnet"
+        "layers": 4,
+        "filters": 32
     },
     "training": {
         "loss": "mse", // "mse", "custom" ou "hybrid"
@@ -63,9 +73,5 @@
         "learning_rate": 0.005,
         "n_epochs": 1,
         "run_eagerly": false //true when loss == "custom"
-    },
-    "inference": {
-        "weights": null, //path to weights
-        "patches": null  //null or "patchify"
     }
 }
