--- a/config/synthesis_example.jsonc
+++ b/config/synthesis_example.jsonc
@@ -26,10 +26,22 @@
         "cmap": "viridis",
         "n": 10
     },
-    "mae":      true,
-    "mse":      true,
-    "bias":     true,
-    "ssim":     true,
+    "mae": {
+        "maps":     true,
+        "distribs": true
+    },
+    "mse": {
+        "maps":     true,
+        "distribs": false
+    },
+    "bias": {
+        "maps":     true,
+        "distribs": false
+    },
+    "ssim": {
+        "maps":     true,
+        "distribs": false
+    },
     "WD":       true,
     "PSD":      true,
     "corr_len": true,
